artf590730: Fixed the issue :phresco framework 2.0:Tablet check box alignment is missing when framework is in red/blue mode.

--- a/phresco-framework-web/src/main/webapp/theme/red_blue/css/media-queries.css
+++ b/phresco-framework-web/src/main/webapp/theme/red_blue/css/media-queries.css
@@ -439,7 +439,7 @@ Width <= 1024
 	}
 	
 	.align-div-center {
-		width: 78%;
+		width: 85%;
 	}
 }
 
