--- a/phresco-framework-web/src/main/webapp/theme/red_blue/css/phresco.css
+++ b/phresco-framework-web/src/main/webapp/theme/red_blue/css/phresco.css
@@ -5810,6 +5810,10 @@ input[class*='chckBxAlign'] {
 	float: left;
 }
 
+.element-width {
+	width: 15%;
+}
+
 .float-right {
 	float: right;
 }
